--- a/package.json
+++ b/package.json
@@ -3,9 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "async": "^3.1.0",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "bowser": "^2.7.0",
+    "clientjs": "^0.1.11",
+    "connected-react-router": "^6.5.2",
+    "history": "^4.10.1",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.13.0",
+    "particles.js": "^2.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-on-images-loaded": "^2.2.3",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-spring": "^8.0.27",
+    "reactstrap": "^8.1.1",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "velocity-animate": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
