--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bowser": "^2.7.0",
     "clientjs": "^0.1.11",
     "connected-react-router": "^6.5.2",
+    "gsap": "^2.1.3",
     "history": "^4.10.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
