--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "bowser": "^2.7.0",
     "clientjs": "^0.1.11",
     "connected-react-router": "^6.5.2",
-    "devices.css": "^0.1.15",
     "gsap": "^2.1.3",
     "history": "^4.10.1",
     "lodash": "^4.17.15",
@@ -50,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^3.2.0"
   }
 }
