--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "bootstrap": "^4.3.1",
     "bowser": "^2.7.0",
     "clientjs": "^0.1.11",
+    "cloud9carousel": "^2.2.0",
     "connected-react-router": "^6.5.2",
     "gsap": "^2.1.3",
     "history": "^4.10.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
     "particles.js": "^2.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-hook-form": "^3.28.15",
     "react-on-images-loaded": "^2.2.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
